--- a/src/components/SignUpGraph/SignUpGraph.css
+++ b/src/components/SignUpGraph/SignUpGraph.css
@@ -1,8 +1,23 @@
 .custom-tooltip {
-  background-color: grey;
-  border: none;
-  box-shadow: none;
-  color: #333;
-  padding: 5px;
+  min-width: 5rem;
+  position: relative;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  background-color: white;
+  color: black;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding:0.5rem 2rem
 }
-
+.custom-tooltip::after {
+  content: "";
+  height: 0;
+  width: 0;
+  position: absolute;
+  bottom: -0.625rem;
+  left: 50%;
+  transform: translateX(-50%);
+  border-style: solid;
+  border-width: 0.625rem 0.625rem 0 0.625rem;
+  border-color: white transparent transparent transparent;
+}
