--- a/src/components/SignUpGraph/SignUpGraph.css
+++ b/src/components/SignUpGraph/SignUpGraph.css
@@ -5,9 +5,9 @@
   border-radius: 0.5rem;
   background-color: white;
   color: black;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
   border: 1px solid rgba(0, 0, 0, 0.1);
-  padding:0.5rem 2rem
+  padding: 0.5rem 2rem;
 }
 .custom-tooltip::after {
   content: "";
