--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600;700;800&display=swap");
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-/* body {
-  margin: 0;
-  padding: 0;
-} */
+* {
+  font-family: "Karla", sans-serif;
+}
